...

                <EditText
                    android:id="@+id/textFieldTitle"
                    android:layout_width="0sp"
                    android:layout_height="50sp"
...

                <EditText
                    android:id="@+id/textFieldCompany"
                    android:layout_width="0sp"
                    android:layout_height="50sp"
...

                <EditText
                    android:id="@+id/textFieldCity"
                    android:layout_width="0sp"
                    android:layout_height="50sp"
...

                <EditText
                    android:id="@+id/textFieldState"
                    android:layout_width="0sp"
                    android:layout_height="50sp"
...

                <EditText
                    android:id="@+id/textFieldCoL"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/textFieldSalary"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/textFieldBonus"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/textFieldStockOptions"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/textFieldHomeFund"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/textFieldPersonalHolidays"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/textFieldInternetStipend"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/bExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/bSaveExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/bSaveEnterAnother"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/bSaveCompare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
