...
                    android:paddingLeft="4sp"
                    android:paddingRight="4sp"
                    android:text="Yearly Salary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/compSalary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </TableRow>
...
                    android:paddingLeft="4sp"
                    android:paddingRight="4sp"
                    android:text="Yearly Bonus"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/compBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </TableRow>
...
                    android:paddingLeft="4sp"
                    android:paddingRight="4sp"
                    android:text="Stock Options"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/compStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </TableRow>
...
                    android:paddingLeft="4sp"
                    android:paddingRight="4sp"
                    android:text="Home Buying Program Fund"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/compHomeFund"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </TableRow>
...
                    android:paddingLeft="4sp"
                    android:paddingRight="4sp"
                    android:text="Personal Choice Holidays"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/compPersonalHolidays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </TableRow>
...
                    android:paddingLeft="4sp"
                    android:paddingRight="4sp"
                    android:text="Monthly Internet Stipend"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/compInternetStipend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </TableRow>
...
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/bSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSavePress"
                android:text="Save" />

            <Space
...
