...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".App">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="78dp"
        android:text="Main Menu"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <Button
            android:id="@+id/bCurrentJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCurrentJobPress"
            android:text="Add/Edit Current Job" />

        <Button
            android:id="@+id/bJobOffers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onJobOffersPress"
            android:text="Enter Job Offers" />

        <Button
            android:id="@+id/bCompSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCompSettingsPress"
            android:text="Adjust Comparison Settings" />

        <Button
            android:id="@+id/bCompare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onComparePress"
            android:text="Compare Job Offers" />
    </LinearLayout>

...
